--- a/assets/style.css
+++ b/assets/style.css
@@ -21,6 +21,10 @@ a {
   margin-top: 2rem;
 }
 
+#edit-link {
+  width: 70%;
+}
+
 .container {
   width: 80%;
   margin: 0 auto;
@@ -49,72 +53,19 @@ h2 {
   font-size: 1.5rem;
 }
 
-/* Form et Boutons  */
-form {
-  width: 35%;
-  /* max-width: 500px;  */
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 20px;
-  background-color: #fafafa;
-  border-radius: 10px;
-  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
-  margin: auto;
-}
-
-label {
-  display: block;
-  margin-bottom: 8px;
-  font-weight: bold;
-  text-align: center;
-  color: #4f2d63;
-  margin-top: 10px;
-}
-
-input[type="text"],
-input[type="number"],
-select {
-  width: 100%;
-  padding: 10px;
-  margin-bottom: 20px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  max-width: 400px;
-}
-
-input[type="submit"],
-button {
-  background-color: #4caf50;
-  color: white;
-  padding: 10px 20px;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-  width: 30%;
-  max-width: 400px;
-  text-align: center;
-}
-
-input[type="submit"]:hover,
-button:hover {
-  background-color: #1b7a1f;
-}
-
 /* Table */
 table {
   width: 80%;
-  border-collapse: collapse;
+  /* border-collapse: collapse; */
   margin: auto;
 }
 
 table,
 th,
 td {
-  border: 1px solid;
   border-radius: 10px;
   background-color: #ddd;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 }
 
 th,
